--- a/bookinfo/patch-gateway-bookinfo.yaml
+++ b/bookinfo/patch-gateway-bookinfo.yaml
@@ -11,7 +11,7 @@ spec:
     tls:
       httpsRedirect: true
     hosts:
-    - "bookinfo.istio-demo.timebertt.dev"
+    - "istio-demo.timebertt.dev"
   - port:
       number: 443
       name: https
@@ -20,4 +20,4 @@ spec:
       mode: SIMPLE
       credentialName: ingress-tls
     hosts:
-    - "bookinfo.istio-demo.timebertt.dev"
+    - "istio-demo.timebertt.dev"
