--- a/bookinfo/patch-virtualservice-bookinfo.yaml
+++ b/bookinfo/patch-virtualservice-bookinfo.yaml
@@ -4,4 +4,21 @@ metadata:
   name: bookinfo
 spec:
   hosts:
-  - "bookinfo.istio-demo.timebertt.dev"
+  - "istio-demo.timebertt.dev"
+  http:
+  - match:
+    - uri:
+        exact: /productpage
+    - uri:
+        prefix: /static
+    - uri:
+        exact: /login
+    - uri:
+        exact: /logout
+    - uri:
+        prefix: /api/v1/products
+    route:
+    - destination:
+        host: productpage
+        port:
+          number: 9080
