--- a/istio-profile.yaml
+++ b/istio-profile.yaml
@@ -1,6 +1,22 @@
 apiVersion: install.istio.io/v1alpha1
 kind: IstioOperator
 spec:
+  meshConfig:
+    extensionProviders:
+    - name: oauth2-proxy
+      envoyExtAuthzHttp:
+        service: oauth2-proxy.istio-system.svc.cluster.local
+        port: 4180
+        includeRequestHeadersInCheck:
+        - cookie
+        - authorization
+        headersToUpstreamOnAllow:
+        - authorization
+        - x-auth-request-user
+        - x-auth-request-email
+        - x-auth-request-access-token
+        headersToDownstreamOnDeny:
+        - set-cookie
   components:
     ingressGateways:
     - name: istio-ingressgateway
@@ -10,5 +26,3 @@ spec:
           dns.gardener.cloud/class: garden
           dns.gardener.cloud/dnsnames: "istio-demo.timebertt.dev,*.istio-demo.timebertt.dev"
           dns.gardener.cloud/ttl: "120"
-          cert.gardener.cloud/issuer: letsencrypt
-          cert.gardener.cloud/secretname: ingress-tls
